--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+/* Navbar */
+* {
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+  font-family: 'PT Sans', sans-serif;
+} 
+
+.añadirUsuario, .verUsuario, .añadirIntervencion, .citas {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+
+/* Añadir usuario */
+.px2-border {
+  border-width:2px !important;
+  padding:25px;
+}
+
+.padding25 {
+padding:25px;
+}
