--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -62,3 +63,5 @@
 .padding25 {
 padding:25px;
 }
+
+.custom-dialog {width:48% !important; top:20%;}
